tests/vendor/invalid/semantics/undeclared_prefix_incr.c
//tags: simple, increment
int main() {
    a++;
    return 0;
}